--- a/src/MainApps/Account/UserProfile/ProfileUnitBlock.module.css
+++ b/src/MainApps/Account/UserProfile/ProfileUnitBlock.module.css
@@ -6,11 +6,13 @@
   display: flex;
   justify-content: space-between;
   margin-left: 30px;
-  border-radius:3px;
+  border-radius:var(--cardBorderRadius);
   /*box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;*/
   width: 70%;
   margin-right: 20px;
-
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--cardBorderColor);
 
 }
 
