--- a/src/MainApps/Dashboard/General/Notices/Notices.module.css
+++ b/src/MainApps/Dashboard/General/Notices/Notices.module.css
@@ -17,14 +17,13 @@ border-style: solid;;
 font-size: calc( 0.3 * var(--headerHeight) );
 cursor: pointer;
 border-width: calc( 0.04 * var(--headerHeight) );
-border-color: #00aff0;
+border-color: var(--cardBorderColor);
 background-color: white;
-color: #00aff0;
+color: var(--themeColor);
 font-family: Roboto;
-border-radius: 5px;
 padding-left: calc( 0.5 * var(--headerHeight) );
 padding-right: calc( 0.5 * var(--headerHeight) );
-
+border-radius: calc( 0.6 * var(--cardBorderRadius) );
 
 }
 
