--- a/src/components/Header/HeaderRight/NotificationsHead/NotificationsHead.module.css
+++ b/src/components/Header/HeaderRight/NotificationsHead/NotificationsHead.module.css
@@ -1,5 +1,5 @@
 .notificationItemsParentDiv{
- background-color: var(--themeColor);
+ background-color: var(--headerBkgColor);
  border-style: none;
  z-index: 9999;
  margin-left: 20px;
@@ -12,7 +12,7 @@
 
 .UsersIcon{
 
-    font-size: calc( 0.35 * var(--headerHeight) );
+    font-size: calc( 0.40 * var(--headerHeight) );
     color: var(--headerRightIconsColor);
     vertical-align:middle;
     flex-shrink: 0;
@@ -30,7 +30,7 @@
     position: relative;
     height: calc( 0.70 * var(--headerHeight) );
     width: calc( 0.70 * var(--headerHeight) );
-    border-style: solid;
+    border-style: none;
     border-width:calc( 0.06 * var(--headerHeight) );
     border-color: var(--headerRightIconsColor);
     border-radius: 50%;
