--- a/src/MainApps/Account/Common/TopTitleBar.module.css
+++ b/src/MainApps/Account/Common/TopTitleBar.module.css
@@ -1,22 +1,24 @@
 
 .topTitleBar{
 
-background-color: #dedede;
-color: grey;
+color: var(--greyTextColor);
 box-shadow: none;
 font-family:'Roboto','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: calc(0.50 * var(--headerHeight));
+font-size: calc(0.45 * var(--headerHeight));
 vertical-align: middle;
 /*margin-left: 30px;*/
 display: flex;
 align-items: center;
+height: calc( 1.2 * var(--headerHeight) );
+border-style: none;
+border-color: red;
 }
 
 .topTitleBar__Text{
 
 margin-left: 30px;
 font-style: normal;
-
+font-family: Roboto;
 }
 
 
