--- a/src/MainApps/Account/UserProfile/Basic/AboutBasic.module.css
+++ b/src/MainApps/Account/UserProfile/Basic/AboutBasic.module.css
@@ -10,6 +10,8 @@ align-items: center;
 flex-direction: column;
 border-style: none;
 border-color: red;
+border-radius:var(--cardBorderRadius);
+
 }
 
 
