--- a/src/MainApps/Account/UserProfile/Basic/UnitAboutIcon.module.css
+++ b/src/MainApps/Account/UserProfile/Basic/UnitAboutIcon.module.css
@@ -32,14 +32,30 @@ margin-left: 10px;
 
 .editButtonAbout{
 left: calc( 0.3 * var(--headerHeight) );
-background-color: orange;
-border-style: none;
-border-radius: 3px;
+background-color: white;
+border-style: solid;
+border-width: 1px;
+border-radius: 5px;
 padding:5px;
 padding-left: 10px;
 padding-right: 10px;
 cursor: pointer;
-color: white;
+color: var(--themeColor);
+border-color: var(--cardBorderColor);
 }
+
+
+.editButtonAbout:hover{
+color:white;
+background-color:var(--themeColor);
+
+}
+
+
+
+
+
+
+
 
 
