--- a/src/MainApps/Account/UserProfile/Friends/UnitFriendsIcon.module.css
+++ b/src/MainApps/Account/UserProfile/Friends/UnitFriendsIcon.module.css
@@ -53,14 +53,16 @@ border-style: solid;
 
 .editButtonAbout{
 left: calc( 0.3 * var(--headerHeight) );
-background-color: orange;
-border-style: none;
-border-radius: 3px;
+background-color: white;
+border-style: solid;
+border-width: 1px;
+border-radius: 5px;
 padding:5px;
 padding-left: 10px;
 padding-right: 10px;
 cursor: pointer;
-color: white;
+color: var(--themeColor);
+border-color: var(--cardBorderColor);
 }
 
 
