--- a/src/MainApps/Account/UserProfile/ProfileImageSec/ProfileImage.module.css
+++ b/src/MainApps/Account/UserProfile/ProfileImageSec/ProfileImage.module.css
@@ -9,6 +9,8 @@ padding:10%;
 background-color:white;
 display: flex;
 flex-direction: column;
+border-style: none;
+border-radius: var(--cardBorderRadius);
 }
 
 
@@ -18,11 +20,13 @@ flex-direction: column;
 position: relative;
 width: 100%;
 height: 95%;
+border-radius: var(--cardBorderRadius);
 }
 
 .changePicButton{
 border-style: none;
 height: 30px;
+border-radius: var(--cardBorderRadius);
 }
 
 
@@ -62,6 +66,7 @@ background-color:var(--themeColor);
 border-style: none;
 margin-top:20px;
 height:30px;
+border-radius: var(--cardBorderRadius);
 }
 
 .submit_button:hover{
