--- a/src/MainApps/Account/UserProfile/ProfileImageSec/ProfileImageSec.module.css
+++ b/src/MainApps/Account/UserProfile/ProfileImageSec/ProfileImageSec.module.css
@@ -2,7 +2,6 @@
 .profileImageSec{
 
 
-  background: #E8E8E8;
   display: flex;
   justify-content: flex-start;
   margin-left: 30px;
@@ -10,13 +9,13 @@
   /*border-radius:3px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;*/
   border-style: none;
-  border-color: grey;
+  border-color: orange;
   border-width: 1px;
   width: 30%;
   flex-direction: column;
   /*grid-row-start:1;
   grid-row-end:2;*/
-
+  
 
 }
 
@@ -24,11 +23,13 @@
 .unitColumn{
 
 width: 100%;
-border-style: none;
+border-style: solid;
 aspect-ratio: 1 / 1.8;
 margin-bottom: 30px;
 background-color: white;
-
+border-color:var(--cardBorderColor);
+border-width: 1px;
+border-radius: var(--cardBorderRadius);
 }
 
 
@@ -81,7 +82,7 @@ margin-right: 20px;
   background-color: white;
   width: 100%;
   height: 100%;
-  border-radius: 3px;
+  border-radius: var(--cardBorderRadius);
   display: flex;
   flex-direction: column;
 }
