--- a/src/MainApps/Account/UserProfile/UserProfileSwitchBar.module.css
+++ b/src/MainApps/Account/UserProfile/UserProfileSwitchBar.module.css
@@ -2,8 +2,16 @@
 
 .userProfileSwitchBar{
 height: calc( 0.6 * var(--headerHeight) );
-background-color: var(--headerRightIconsColor);
+background-color: white;
 display: flex;
 justify-content:flex-start;
 flex-direction: row;
+border-radius:var(--cardBorderRadius);
+border-bottom-style: solid;
+border-width: 2px;
+border-color: var(--bodyBkgColor);
 }
+
+
+
+
