--- a/src/MainApps/Assignments/AssignmentsContentDiv.module.css
+++ b/src/MainApps/Assignments/AssignmentsContentDiv.module.css
@@ -2,12 +2,12 @@
 .contentDiv{
 position: relative;
 background-color: var(--mainAppContainerBkgColor);
+background-color:var(--bodyBkgColor);
 border-style:none;
 border-width: 1px;
 border-color: lightgrey;
 width: 100% ;
 height: calc( 100vh - calc( 1  * var(--headerHeight) ) );
-background-color: white;
 border-radius: 0px 0px 0px 0px;
 overflow-y: auto;
 overflow-x: hidden;
