--- a/src/MainApps/Assignments/components/Teacher/TopToolBarV1.module.css
+++ b/src/MainApps/Assignments/components/Teacher/TopToolBarV1.module.css
@@ -9,7 +9,6 @@ border-style: none;
 border-bottom-style: none;	
 border-bottom-color:grey;
 width: var(--topInnerBarWidth);
-background-color:white;
 border-width: 1px;
 margin: auto;
 border-style: none;
@@ -60,7 +59,7 @@ margin-right: 20px;
 
 
 .TitleBox1{
-    font-size: 30px;
+    font-size: var(--topBarLeftTitleFontSize);
     font-weight: bold;
     border: none;
     /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
