--- a/src/MainApps/Classes/components/Teacher/ClassViewShort_v2.module.css
+++ b/src/MainApps/Classes/components/Teacher/ClassViewShort_v2.module.css
@@ -2,9 +2,10 @@
 box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 border-style: solid;
 border-width: 1px;
-border-radius: 5px;
+border-radius: var(--cardBorderRadius);
 padding: 20px;
 border-color: lightgrey;
+background-color: white;
 }
 
 
@@ -93,7 +94,18 @@ margin: auto;
 float: right;
 border-style: none;
 margin-left: 20px;
+background-color: white;
+cursor: pointer;
 }
+
+
+.dotsButton:hover{
+
+background-color: var(--bodyBkgColor);
+
+}
+
+
 
 
 .middleDiv{
@@ -135,10 +147,10 @@ border-style: none;
 border-radius: 3px;
 padding-left: 15px;
 padding-right: 15px;
-background-color: orange;
+background-color: #d67b1a;
 color: white;
 width:150px;
-border-radius: 2px;
+border-radius: var(--cardBorderRadius);
 cursor: pointer;
 font-family: Roboto;
 }
@@ -152,7 +164,7 @@ align-items: center;
 display: flex;
 width: 150px;
 cursor: pointer;
-border-radius: 2px;
+border-radius: var(--cardBorderRadius);
 padding-left: 15px;
 color: var(--tintGreyColor1);
 font-family: Roboto;
@@ -218,11 +230,26 @@ display: flex;
 
 margin-left: 10px;
 margin-right: 10px;
-border-style: solid;
+border-style: none;
 border-width: 1px;
 padding: 5px;
 border-radius: 5px;
 border-color: var(--tintGreyColor2);
+color: var(--themeColor);
 }
+
+
+.classNum{
+border-style: none;	
+border-radius: 50%;
+color: grey;
+background-color: var(--bodyBkgColor);
+color: var(--themeColor);
+padding: 10px;
+}
+
+
+
+
 
 
