--- a/src/MainApps/Classes/components/Teacher/TopToolBarV1.module.css
+++ b/src/MainApps/Classes/components/Teacher/TopToolBarV1.module.css
@@ -9,7 +9,6 @@ border-style: none;
 border-bottom-style: none;	
 border-bottom-color:grey;
 width: var(--topInnerBarWidth);
-background-color:white;
 border-width: 1px;
 margin: auto;
 border-style: none;
@@ -60,14 +59,14 @@ margin-right: 20px;
 
 
 .TitleBox1{
-font-size: calc( 0.30 * var(--headerHeight) );
+font-size: var(--topBarLeftTitleFontSize);
 font-weight: bold;
 color: var(--deepDarkThemeTextColor);
 }
 
 
 .TitleBox2{
-font-size: 15px;
+font-size: var(--topBarLeftTitleFontSize);
 color: grey;
 margin-top:15px;
 }
