--- a/src/MainApps/CommonAppUtilities/AppContentDiv.module.css
+++ b/src/MainApps/CommonAppUtilities/AppContentDiv.module.css
@@ -6,9 +6,10 @@ border-color: red;
 width: 100% ;
 height: 100%;
 position: relative;
-background-color: var(--lightThemeColor2);
+background-color: var(--bodyBkgColor);/*var(--lightThemeColor2);*/
 overflow-x: hidden;
 overflow-y: hidden;
+border-radius: var(--cardBorderRadius) 0px 0px 0px;
 }
 
 .pwdAppDirectory{
