--- a/src/MainApps/CommonAppUtilities/MainAppContainer.module.css
+++ b/src/MainApps/CommonAppUtilities/MainAppContainer.module.css
@@ -3,7 +3,7 @@
 position: relative;
 /*background-color: red;#E8E8E8;*/
 width: calc( 99% - var(--sideNavBarWidth)  );
-top:  calc( var(--headerHeight) + var(--headerTopMargin) );
+top: var(--headerHeight);/* calc( var(--headerHeight) + var(--headerTopMargin) );*/
 left: calc( var(--sideNavBarWidth) + 0.5% );
 /*display: grid;
 grid-template-columns: 1fr;
@@ -11,15 +11,13 @@ grid-template-rows: calc(0.5 * var(--headerHeight)) calc(0.9 * var(--headerHeigh
 grid-row-gap: calc( 0.20 * var(--headerHeight) );*/
 transition: 0.5s;
 border-style: none;
-height: calc( 100vh - var(--headerHeight) - var(--headerTopMargin) );
+height: calc( 100vh - var(--headerHeight) );
 min-width: 400px;
 border-style: none;
 border-color: green;
 border-width: 1px;
-background-color: var(--lightThemeColor2);
 overflow-x: hidden;
 overflow-y: hidden;
-
 }
 
 
