--- a/src/MainApps/Dashboard/General/Meetings/MeetingViewShort.module.css
+++ b/src/MainApps/Dashboard/General/Meetings/MeetingViewShort.module.css
@@ -1,10 +1,10 @@
 .courseViewDashboard{
-border-style: none;
+border-style: solid;
 border-width: 1px;
 border-color: lightgrey;
-border-radius: 5px;
+border-radius: var(--cardBorderRadius);
 /*box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;*/
-box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+/*box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;*/
 margin-top: 30px;
 padding: 20px;
 
