--- a/src/MainApps/Dashboard/General/Notices/NoticeBox.module.css
+++ b/src/MainApps/Dashboard/General/Notices/NoticeBox.module.css
@@ -3,19 +3,18 @@
 
 max-width: 100%;
 background-color: white;
-border-radius: 5px;
+border-radius: var(--cardBorderRadius);
 margin-bottom: 0px;
-border-style: none;
+border-style: solid;
 border-width: 1px;
-border-color: var(--headerRightIconsColor);
-border-color: #e0ebff;
+border-color: lightgrey;
 display: flex;
 flex-direction: column;
 align-items: center;
 padding-top: 20px;
 padding-bottom: 10px;
 margin-top: 10px;
-box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+/*box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;*/
 }
 
 
