--- a/src/MainApps/Dashboard/General/components/Teacher/CourseViewDashboard_v2.module.css
+++ b/src/MainApps/Dashboard/General/components/Teacher/CourseViewDashboard_v2.module.css
@@ -1,17 +1,19 @@
 .courseViewDashboard{
 border-width: 1px;
 background-color: white;
-border-radius: 5px;
+border-radius: var(--cardBorderRadius);
 margin-bottom: 0px;
-border-style: none;
+border-style: solid;
 border-color: var(--headerRightIconsColor);
 border-color: #e0ebff;
-box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+/*box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;*/
+border-color: var(--tintGreyColor3);
 }
 
 
-
-
+.courseViewDashboard:hover{
+box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
 
 
 
@@ -382,12 +384,12 @@ height: calc( 0.6 * var(--headerHeight) );
 width: calc( 0.6 * var(--headerHeight) );
 border-radius: calc( 0.2 * var(--headerHeight) );
 border-style: solid;
-border-color: var(--tintGreyColor2);
+border-color: lightgrey;
 border-width: calc( 0.05 * var(--headerHeight) );
 display: flex;
 justify-content: center;
 align-items: center;
-color: var(--tintGreyColor2);
+color: lightgrey;
 cursor: pointer;
 font-size:calc( 0.3 * var(--headerHeight) );
 }
