--- a/src/components/Header/HeaderLeft.module.css
+++ b/src/components/Header/HeaderLeft.module.css
@@ -5,11 +5,14 @@
 
     text-align: center;
     padding-left: 20px;
-    display: flex;
-    justify-content: space-between;
+    display:flex;
+    justify-content: flex-start;
     align-items: center; 
     overflow: hidden;
     border-style: none;
+    border-bottom: solid;
+    border-width: 1px;
+    border-color: lightgrey;
     }
 
 .logo{
@@ -26,16 +29,31 @@
 
 
 .logoText{
-color: white;
-font-size: calc( 0.35 * var(--headerHeight) );
+color: var(--themeColor);
+font-size: calc( 0.40 * var(--headerHeight) );
 margin: auto;
 border-style: none;
 display: flex;
 justify-content: space-between;
 align-items: center;
-color: white;
 margin-left: 20px;
+background-color: var(--themeColor);
+color: white;
+height: calc( 0.40 * var(--headerHeight) );
+border-radius: calc( 0.1 * var(--headerHeight) );
+padding: calc( 0.16 * var(--headerHeight) );
+position: relative;
 }   
+
+
+.styleBar{
+width: calc( 0.20 * var(--headerHeight) );
+height: calc( 0.07 * var(--headerHeight) );
+background-color: var(--themeColor);
+position: absolute;
+}
+
+
 
 .logoText span{
 margin-left: 10px;
@@ -78,7 +96,7 @@ display:none;
     color: white;
     font-weight: lighter !important;
     font-style: normal;
-    background-color: var(--themeColor);
+    background-color: var(--headerBkgColor);
     /*border-style: solid;*/
     overflow: hidden;
     border-style: none;
@@ -93,6 +111,7 @@ font-size: calc( 0.30 * var(--headerHeight) );
 font-style: normal;
 font-weight: lighter !important;
 font-family: Roboto;
+color: var(--deepDarkThemeTextColor);
 }
 
 
@@ -116,21 +135,29 @@ cursor: pointer;
 display: flex;
 justify-content: center;
 align-items: center;
-padding-left: 10px;
-padding-right: 10px;
 margin-left: 20px;
+float: left;
+border-radius: calc( 0.1 * var(--headerHeight) );
+}
+
+
+.ExpConButton:hover{
+background-color: lightgrey;
 }
 
 
 .ExpConIcon{
 
 font-size: calc( 0.35 * var(--headerHeight));
-color: white;
+color: var(--deepDarkThemeTextColor);
 
 }
 
 
 
+.clickDash{
+color: var(--deepDarkThemeTextColor);
+}
 
 .clickDash:hover{
 cursor:pointer;
@@ -140,9 +167,9 @@ cursor:pointer;
 
 
 .backButton{
-background-color: var(--themeColor);
+background-color: var(--headerBkgColor);
 border-style: none;
-color: white;
+color: var(--deepDarkThemeTextColor);
 cursor: pointer;
 padding-right: 20px;
 }
