--- a/src/components/Header/HeaderRight/ActionItemsHead/ActionItemsHead.module.css
+++ b/src/components/Header/HeaderRight/ActionItemsHead/ActionItemsHead.module.css
@@ -1,5 +1,5 @@
 .actionItemsParentDiv{ 
- background-color: var(--themeColor);
+ background-color: var(--headerBkgColor);
  border-style: none;
  z-index: 9999;
 }
@@ -17,7 +17,7 @@ width: 100px;
 
 
 .UsersIcon{
-    font-size: calc(  0.35 * var(--headerHeight) );
+    font-size: calc(  0.40 * var(--headerHeight) );
     color: var(--headerRightIconsColor);
     vertical-align:middle;
     border-style: none;
@@ -37,11 +37,11 @@ width: 100px;
     position: relative;
     height: calc( 0.7 * var(--headerHeight) );
     width: calc( 0.7 * var(--headerHeight) );
-    border-style: solid ;
+    border-style: none ;
     border-color: var(--headerRightIconsColor);
     border-width:calc( 0.06 * var(--headerHeight) );
     border-radius: 50%;
-    background-color: var(--themeColor);
+    background-color: var(--headerBkgColor);
     vertical-align: middle;
     cursor:pointer;
     display: flex;
