--- a/src/MainApps/Assignments/Pending.module.css
+++ b/src/MainApps/Assignments/Pending.module.css
@@ -1,66 +1,133 @@
-.pendingdiv{
-    width: 90%;
-    margin: auto;
-    border-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr) );
-    /* grid-auto-rows: 250px ; */
-    /* border-style: none; */
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    /* margin: 50px; */
-    margin-top: 50px;
-    
+.pendingdiv {
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
+  /* grid-auto-rows: 250px ; */
+  /* border-style: none; */
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  /* margin: 50px; */
+  margin-top: 50px;
+}
+.assignmentBox {
+  /* display: flex; */
+  /* justify-content: space-between; */
+  height: 105px;
+  width: 90%;
+  padding: calc(0.5 * var(--headerHeight));
+  border: 1px solid #d3d3d3;
+  border-radius: var(--cardBorderRadius);
+  border-radius: 8px;
+  background-color: #ffff;
 }
 
-
-.assignmentBox{
-    
-    height: 170px;
-    /* margin-top: 35px; */
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-   
-    
+.headSectionDiv {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
+.assignmentTitle {
+  color: var(--deepDarkThemeTextColor);
+  margin-left: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: var(--deepDarkThemeTextColor2);
+  color: #3f444d;
+  color: #5f656e;
+  color: var(--deepDarkThemeTextColor);
+  font-weight: 500;
+  font-size: 20px;
+}
+.courseId {
+  border-style: none;
+  border-radius: 20%;
+  color: grey;
+  background-color: var(--bodyBkgColor);
+  color: var(--themeColor);
+  padding: 10px;
+}
+.status {
+  font-weight: bold;
+  color: #008000;
+}
+.threeDots {
+  font-size: 12px;
+  margin-left: 10px;
+}
+.AssignBy {
+  color: var(--lightGreyTintTextColor);
+  margin-left: 40px;
+  margin-top: 10px;
+}
+.dateInfo {
+  color: var(--lightGreyTintTextColor);
+  margin-top: 10px;
+  display: flex;
+}
+.infoDate {
+  color: var(--themeColor);
+  font-weight: bold;
+}
+.startDate {
+  padding-right: 10px;
+}
+.dueDate {
+  padding-left: 10px;
+  border-left: 1px solid grey;
+}
+.secondSection {
+  display: flex;
+  justify-content: space-between;
+}
+.leftLowerDiv {
+  display: flex;
+}
+.rightLowerDiv {
+  border-style: none;
+  height: 100%;
+  display: flex;
+  margin-top: 20px;
+}
+.uploadButton {
+  height: 80%;
+  border-style: none;
+  border-radius: 3px;
+  padding: 15px;
+  background-color: #d67b1a;
+  color: white;
+  width: 150px;
+  border-radius: var(--cardBorderRadius);
+  cursor: pointer;
+  font-family: Roboto;
+}
 
-.box1{
-    width: 100%;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
+.viewAssignmentButton {
+  height: 80%;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-style: none;
+  display: flex;
+  width: 150px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: var(--cardBorderRadius);
+  padding: 15px;
+  color: var(--tintGreyColor1);
+  font-family: Roboto;
 }
-.totalCredit{
-    margin-top: 2px;
-    font-size: 12px;
-    text-align: center;
-    
+.viewdetailIcon {
+  margin-left: 10px;
 }
-
-.box2{
-   margin-left: 15px;
-   margin-right: 15px;
-   margin-bottom: 20px;
-   font-size: 12px;
-   display: flex;
-    justify-content: space-between;
-   
+.thirdLeftDiv {
+  display: flex;
+  color: var(--lightGreyTintTextColor);
+  margin-left: 40px;
+  margin-top: 2px;
 }
-
-.icons{
-    font-size: 18px;
-    margin-right: 10%;
-   
+.tubeIconText {
+  color: var(--themeColor);
+  font-weight: bold;
 }
-.courseid{
-    background-color: #dcf7ea;
-    margin-right: 20px;
-    font-size: 15px;
-    padding: 3px;
-    color: #8ed5b1;
-}
-
-.pending{
-    color: #224c98;
-}
-
